Disable MSAA on Metal backends

Also, don't use render buffers if sample count is 1

See QTBUG-123211