examples/SimpleViewer/main.cpp
@@ -18,7 +18,7 @@ int main(int argc, char *argv[])
 
 #if QT_VERSION >= QT_VERSION_CHECK(6, 0, 0)
     // Force OpenGL
-    QQuickWindow::setGraphicsApi(QSGRendererInterface::OpenGL);
+    // QQuickWindow::setGraphicsApi(QSGRendererInterface::OpenGL);
 #endif
 
 #if QT_VERSION < QT_VERSION_CHECK(6, 0, 0)
