src/RiveQtQuickItem/renderer/riveqtfactory.cpp
@@ -28,16 +28,20 @@ RiveQSGRenderNode *RiveQtFactory::renderNode(QQuickWindow *window, std::weak_ptr
     case QSGRendererInterface::GraphicsApi::Direct3D11Rhi: {
         QSGRendererInterface *renderInterface = window->rendererInterface();
         QRhi *rhi = static_cast<QRhi *>(renderInterface->getResource(window, QSGRendererInterface::RhiResource));
-        if (rhi->isFeatureSupported(QRhi::MultisampleTexture) && rhi->isFeatureSupported(QRhi::MultisampleRenderBuffer)) {
 
+        auto sampleCounts = rhi->supportedSampleCounts();
+        auto requestedSamplesFromFormat = window->format().samples();
+
+        if (requestedSamplesFromFormat == 1 || (requestedSamplesFromFormat > 1 
+            && rhi->isFeatureSupported(QRhi::MultisampleRenderBuffer)
+            && sampleCounts.contains(requestedSamplesFromFormat))) {
             auto node = new RiveQSGRHIRenderNode(window, artboardInstance, geometry);
             node->setFillMode(m_renderSettings.fillMode);
             node->setPostprocessingMode(m_renderSettings.postprocessingMode);
             return node;
         } else {
             qCritical(rqqpFactory)
-                << "RiveQtQuickPlign requires multisample support. The hardware does not support multisampling. Switch to "
-                   "SoftwareRenderer.";
+                << "MSAA requested, but requested sample size is not supported - requested sample size:" << requestedSamplesFromFormat;
             return nullptr;
         }
     }
